[Media Controls] Fix abrupt transition after interacting with volume slider/mute button

Bug: 907666
Change-Id: Icbee5df7ce3b253407843dbbfd569117d3b866de
Reviewed-on: https://chromium-review.googlesource.com/c/1351601
Commit-Queue: Jazz Xu <jazzhsu@chromium.org>
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611457}
Former-commit-id: 6a753e66480c3f65e19a7baa0a4a3214ba774687